# revisortesis

./: .gitignore  IMPLEMENTATION.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0560059db985_phase7_orcid_publications_and_advisor_.py  2298185806fd_phase10_fine_tuning_jobs_and_system_.py  273dd3290cc0_phase5_document_chunks_and_plagiarism_.py  2f67c147d36f_phase3_submissions_and_versions.py  7c68e36bc49b_phase4_ai_evaluations_and_ai_findings.py  80bbcdae218f_phase2_template_documents.py  93c7cf1b6cdf_phase1_users_and_profiles.py  95c60583537e_phase11_push_tokens.py  a59a4f2b578f_phase13_audit_logs.py  f8cb8d18794e_phase6_citations.py
apps/api/src/kimy/: main.py
apps/api/src/kimy/api/v1/: __init__.py  audit.py  auth.py  bulk.py  citations.py  evaluations.py  fine_tuning.py  orcid.py  plagiarism.py  programs.py  push.py  reports.py  settings.py  stats.py  submissions.py  templates.py  users.py
apps/api/src/kimy/core/: audit.py  config.py  crypto.py  deps.py  rate_limit.py  security.py
apps/api/src/kimy/db/: base.py  session.py
apps/api/src/kimy/models/: __init__.py  academic_program.py  advisor_profile.py  ai_evaluation.py  ai_finding.py  audit_log.py  citation.py  document_chunk.py  fine_tuning_job.py  orcid_publication.py  plagiarism_match.py  push_token.py  student_profile.py  submission.py  submission_version.py  system_setting.py  template_document.py  user.py
apps/api/src/kimy/schemas/: audit.py  auth.py  bulk.py  citations.py  evaluations.py  fine_tuning.py  orcid.py  plagiarism.py  programs.py  push.py  reports.py  settings.py  stats.py  submissions.py  templates.py  users.py
apps/api/src/kimy/scripts/: seed_demo.py
apps/api/src/kimy/services/: activity.py  bulk.py  evaluations.py  programs.py  settings.py  stats.py  storage.py  submissions.py  templates.py  users.py
apps/api/src/kimy/services/ai/: __init__.py  llm_evaluator.py  pipeline.py  schemas.py  stub_evaluator.py
apps/api/src/kimy/services/citations/: crossref.py  extractor.py  validator.py
apps/api/src/kimy/services/documents/: extractor.py  structure_parser.py
apps/api/src/kimy/services/fine_tuning/: exporter.py  submitter.py
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_push.py  test_submissions.py
(+162 files in other folders)
