[project]
name = "kimy-api"
version = "0.1.0"
description = "KIMY backend API — thesis review with AI, plagiarism detection and citation validation"
requires-python = ">=3.12"
dependencies = [
    # Core web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "greenlet>=3.1.0",
    # Auth & crypto
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.0",
    "cryptography>=44.0.0",
    "email-validator>=2.2.0",
    # HTTP client (CrossRef, ORCID, AI providers)
    "httpx>=0.28.0",
    # Document parsing
    "python-docx>=1.1.2",
    "pypdf>=5.1.0",
    "python-multipart>=0.0.20",
    # PDF generation (acta de revisión)
    "reportlab>=4.2.0",
    # Rate limiting (Fase 12)
    "slowapi>=0.1.9",
    # Expo push notifications (mobile)
    "exponent-server-sdk>=2.0.0",
]

[project.optional-dependencies]
workers = [
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
]
ai = [
    "google-genai>=0.7.0",
    "openai>=1.55.0",     # legacy — kept for backward-compat / experiments
    "anthropic>=0.40.0",  # legacy fallback path
    "langchain>=0.3.0",
    "llama-index>=0.12.0",
    "tiktoken>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kimy"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "A", "C4", "PT", "RET", "SIM"]
ignore = [
    "S101",  # `assert` is the heart of pytest
    "B008",  # FastAPI `Depends(...)` is the canonical default-arg pattern
    "N811",  # `from pgvector...sqlalchemy import UUID as PgUUID` is intentional disambiguation
    "E501",  # long lines tolerated — docstrings + raw SQL get noisy fast
    "UP042", # `(str, Enum)` is still valid pre-StrEnum idiom we want to keep for now
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S107"]  # test passwords are not secrets

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
